fixed spacing in footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -958,7 +958,7 @@
 
 .footer-social {
   margin-right: 5%;
-  width: 30%;
+  width: 22%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
